--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,7 @@
     "paths": {
       "@": ["./src"],
       "$utils/*": ["src/utils/*"],
-      "$xobject/*": ["src/xobject/*"]
+      "$xObject/*": ["src/xObject/*"]
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     /* 指定声明文件或文件夹的路径列表，如果指定了此项，则只有在这里列出的声明文件才会被加载 */
