--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neo-open-api",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "Neo OpenAPI SDK",
   "keywords": [
     "neo open api",
@@ -32,10 +32,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git@github.com:wibetter/neo-open-api.git"
+    "url": "https://github.com/xsy-neoui/neo-open-api.git"
   },
   "bugs": {
-    "url": "https://github.com/wibetter/neo-open-api/issues"
+    "url": "https://github.com/xsy-neoui/neo-open-api/issues"
   },
   "dependencies": {
     "axios": "^0.27.2",
