fix: 重新构建esm模块，并发版

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neo-open-api",
-  "version": "1.1.9",
+  "version": "1.1.11",
   "description": "Neo OpenAPI SDK",
   "keywords": [
     "neo open api",
@@ -9,7 +9,7 @@
   "author": "wibetter",
   "license": "MIT",
   "main": "dist/index.umd.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/index.esm.min.js",
   "scripts": {
     "linkDebug": "neo linkDebug",
     "build2lib": "neo build2lib",
@@ -46,7 +46,7 @@
     "@commitlint/config-conventional": "^9.1.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
-    "neo-cmp-cli": "^1.8.17",
+    "neo-cmp-cli": "^1.9.7",
     "prettier": "^2.0.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
